@@ -2,6 +2,8 @@ Sat  Sep 11  2004	H. Wade Minter (minter@lunenburg.org)
      * Fixed a similar bug in the edit_categories function.
      * Fixed an inaccuracy in progress reporting with update_times, due
        to the previous policy of ignoring invalid files.
+     * Provide a sane -initialdir to getOpenFile, getSaveFile, and
+       chooseDirectory, if none is set.
 
 Fri  Sep 10  2004	H. Wade Minter (minter@lunenburg.org)
      * Fixed a bug in the delete_categories function that was causing
